# ghidra_rust

./: CLAUDE.md  Cargo.toml
crates/gr-analysis/: Cargo.toml
crates/gr-analysis/src/: analyzer.rs  callgraph.rs  callingconv.rs  coverage.rs  dataref.rs  demangle.rs  discovery.rs  lib.rs  manager.rs  noreturn_prop.rs  propagation.rs  stack.rs  thunk.rs
crates/gr-arch/: Cargo.toml
crates/gr-arch/src/: arch.rs  arm.rs  lib.rs  mips.rs  ppc.rs  pspec.rs  regmap.rs  riscv.rs  x86.rs
crates/gr-cli/: Cargo.toml
crates/gr-cli/src/: main.rs
crates/gr-cli/tests/: integration.rs
crates/gr-core/: Cargo.toml
crates/gr-core/src/: address.rs  datatype.rs  lib.rs
crates/gr-decompile/: Cargo.toml
crates/gr-decompile/src/: action.rs  cast.rs  cfg.rs  dataflow.rs  emit.rs  lib.rs  optimize.rs  pipeline.rs  ssa.rs  structure.rs  taint.rs  varrecovery.rs
crates/gr-emulator/: Cargo.toml
crates/gr-emulator/src/: breakpoint.rs  emulator.rs  lib.rs  network.rs  process.rs  snapshot.rs  state.rs  tui.rs
crates/gr-lift/: Cargo.toml
crates/gr-lift/src/: aarch64.rs  arm32.rs  lib.rs  lift.rs  sparc.rs  x86.rs
crates/gr-loader/: Cargo.toml
crates/gr-loader/src/: dwarf.rs  flirt.rs  hash.rs  lib.rs  loader.rs  memory.rs  pe_extra.rs
crates/gr-program/: Cargo.toml
crates/gr-program/src/: function.rs  lib.rs  listing.rs  program.rs  project.rs  reference.rs  symbol.rs
crates/gr-sleigh/: Cargo.toml
crates/gr-sleigh/src/: decode.rs  lib.rs  pcode_template.rs  sla.rs
