[package]
name = "gr-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Analysis engine for ghidra-rust: function discovery, references, call graph"

[dependencies]
gr-core = { workspace = true }
gr-loader = { workspace = true }
gr-arch = { workspace = true }
gr-program = { workspace = true }
thiserror = { workspace = true }
petgraph = { workspace = true }
