[package]
name = "gr-loader"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Binary format loaders for ghidra-rust (ELF, PE, Mach-O)"

[dependencies]
gr-core = { workspace = true }
goblin = { workspace = true }
memmap2 = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
